primitives/runtime-interface/tests/ui/no_generic_parameters_method.stderr
error: Generic parameters not supported.
 --> $DIR/no_generic_parameters_method.rs:5:10
  |
5 |     fn test<T>() {}
  |             ^
