primitives/runtime-interface/tests/ui/no_generic_parameters_method.rs
use sp_runtime_interface::runtime_interface;

#[runtime_interface]
trait Test {
	fn test<T>() {}
}

fn main() {}
